<resources>
    <string name="app_name">Register and Login</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="first_name_r">First Name</string>
    <string name="logout">Logout</string>
    <string name="email_r">Email</string>
    <string name="date_of_birth_r">Date of Birth</string>
    <string name="last_name_r">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="password_r">Password</string>
    <string name="register">Register</string>
    <string name="mm_dd_yyyy">MM/DD/YYYY</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="email">Email</string>
    <string name="username_r">Username</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="user_name_m">Username</string>
    <string name="password_m">Password</string>
    <string name="new_registration_click_here">New Registration: Click Here</string>
    <string name="todo">TODO</string>
</resources>
