<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:layout_width="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/username"
            android:textSize="20sp"
            android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:importantForAutofill="no"
        android:inputType="text"
        android:labelFor="@id/etUsername" />

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/password"
            android:textSize="20sp"
            android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:labelFor="@id/etPassword" />

        <Button
            android:id="@+id/bLogin"
            android:text="@string/login"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/bRegisterHere"
            android:layout_width="wrap_content"
            android:text="@string/new_registration_click_here"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content" />

</LinearLayout>