<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_width="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/user_name_m"
            android:textSize="20sp"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/etFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:importantForAutofill="no"
            android:inputType="text"
            android:labelFor="@id/etFirstName" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_m"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/etLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:importantForAutofill="no"
            android:inputType="text"
            android:labelFor="@id/etLastName" />

        <Button
            android:id="@+id/bLogout"
            android:text="@string/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>
</ScrollView>